Fixed carousel style

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 </p>
     
                 <p>
-                Lost in Neverland's Live Performances are nothing short of ethereal spectacles. Their shows are an immersive fusion of music, art, and storytelling, transporting the audience to a realm where reality and fantasy coalesce. With mesmarizing visuals and captivating stage presence, the band creates an otherworldy experience, leaving attendees speelbound.
+                Lost in Neverland's Live Performances are nothing short of ethereal spectacles. Their shows are an immersive fusion of music, art, and storytelling, transporting the audience to a realm where reality and fantasy coalesce. With mesmarizing visuals and captivating stage presence, the band creates an otherworldy experience, leaving attendees spellbound.
                 </p>
 
             </div>
