--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="d-flex flex-column align-items-center justify-content-center">
             <h1>Lost in Neverland</h1>
     
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3oabeJ2SvRAkps9tt0HYWn?utm_source=generator&theme=0" width="50%" height="150px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe class="mt-auto" style="border-radius:12px" src="https://open.spotify.com/embed/artist/5bLc41bq2Ay0LoaJm6cNbr?utm_source=generator&theme=0" width="70%" height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <!-- 
             TODO:
                 STATISTICS
