--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost In Neverland</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="index.css">
+
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -25,17 +30,17 @@
                 </a>
               
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#"><h3>Gallery</h3></a>
-                  <a class="dropdown-item" href="#"><h3>Statistics</h3></a>
-                  <a class="dropdown-item" href="#"><h3>Upcoming Events</h3></a>
+                  <a class="dropdown-item" href="gallery.html"><h3>Gallery</h3></a>
+                  <a class="dropdown-item" href="statistics.html"><h3>Statistics</h3></a>
+                  <a class="dropdown-item" href="upcoming.html"><h3>Upcoming Events</h3></a>
                 </div>
             </div>
         </div>
     </div>
 
-<div id="socials">
-    <div id="connect">
-        <h1>Connect</h1>
+    <div id="socials">
+        <div id="connect">
+            <h1>Connect</h1>
             <div id="spotify">
                 <img src="" alt="">
                 <h1>Lost in Neverland PH</h1>
@@ -48,10 +53,10 @@
                 <img src="" alt="">
                 <h1>Lost in Neverland PH</h1>
             </div>
-    </div>
+        </div>
 
-    <div id="contact">
-        <h1>Contact</h1>
+        <div id="contact">
+            <h1>Contact</h1>
             <div id="phone">
                 <img src="" alt="">
                 <h1>0961-522-2941</h1>
@@ -64,13 +69,16 @@
                 <img src="" alt="">
                 <h1>Lost in Neverland</h1>
             </div>
+        </div>
     </div>
-</div>
 
     <div id="Copyright">
         <h1>Lost in Neverland</h1>
         <h2>© 2023. All Rights Reserved.</h2>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 </html>
 
