--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost In Neverland</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -24,9 +27,9 @@
                 </a>
               
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#"><h3>Gallery</h3></a>
-                  <a class="dropdown-item" href="#"><h3>Statistics</h3></a>
-                  <a class="dropdown-item" href="#"><h3>Upcoming Events</h3></a>
+                    <a class="dropdown-item" href="gallery.html"><h3>Gallery</h3></a>
+                    <a class="dropdown-item" href="statistics.html"><h3>Statistics</h3></a>
+                    <a class="dropdown-item" href="upcoming.html"><h3>Upcoming Events</h3></a>
                 </div>
             </div>
         </div>
@@ -59,5 +62,8 @@
 
         
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 </html>
