Added contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -38,41 +38,41 @@
         </div>
     </div>
 
-    <div id="socials">
+    <div id="socials" class="d-flex justify-content-between align-items-center container">
         <div id="connect">
             <h1>Connect</h1>
-            <div id="spotify">
-                <img src="" alt="">
-                <h1>Lost in Neverland PH</h1>
+            <div id="spotify" class="d-flex align-items-center">
+                <img src="images/contacts/spotify.png" alt="">
+                <h2>Lost in Neverland PH</h2>
             </div>
-            <div id="youtube">
-                <img src="" alt="">
-                <h1>Lost in Neverland PH - Topic</h1>
+            <div id="youtube" class="d-flex align-items-center">
+                <img src="images/contacts/youtube.png" alt="">
+                <h2>Lost in Neverland PH - Topic</h2>
             </div>
-            <div id="itunes">
-                <img src="" alt="">
-                <h1>Lost in Neverland PH</h1>
+            <div id="itunes" class="d-flex align-items-center">
+                <img src="images/contacts/apple.png" alt="">
+                <h2>Lost in Neverland PH</h2>
             </div>
         </div>
 
         <div id="contact">
             <h1>Contact</h1>
-            <div id="phone">
-                <img src="" alt="">
-                <h1>0961-522-2941</h1>
+            <div id="phone" class="d-flex align-items-center">
+                <img src="images/contacts/call.png" alt="">
+                <h2>0961-522-2941</h2>
             </div>
-            <div id="email">
-                <img src="" alt="">
-                <h1>lostinneverlandmusicph@gmail.com</h1>
+            <div id="email" class="d-flex align-items-center">
+                <img src="images/contacts/email.png" alt="">
+                <h2>lostinneverlandmusicph@gmail.com</h2>
             </div>
-            <div id="facebook">
-                <img src="" alt="">
-                <h1>Lost in Neverland</h1>
+            <div id="facebook" class="d-flex align-items-center">
+                <img src="images/contacts/fb.png" alt="">
+                <h2>Lost in Neverland</h2>
             </div>
         </div>
     </div>
 
-    <div id="Copyright">
+    <div id="copyright" class="text-center">
         <h1>Lost in Neverland</h1>
         <h2>© 2023. All Rights Reserved.</h2>
     </div>
