--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             </div>
         </div>
     </div>
-    <div class="container d-flex align-items-center justify-content-center" id="home">
-        <div class="d-flex flex-column align-items-center justify-content-center">
+    <div class="container d-flex justify-content-center" id="home">
+        <div class="d-flex flex-column align-items-center justify-content-end">
             <h1>Lost in Neverland</h1>
     
-            <iframe class="mt-auto" style="border-radius:12px" src="https://open.spotify.com/embed/artist/5bLc41bq2Ay0LoaJm6cNbr?utm_source=generator&theme=0" width="70%" height="350" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe class="" style="border-radius:12px" src="https://open.spotify.com/embed/artist/5bLc41bq2Ay0LoaJm6cNbr?utm_source=generator&theme=0" width="70%" height="250" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <!-- 
             TODO:
                 STATISTICS
@@ -44,8 +44,6 @@
                     Page Visitors
                     Likes on Page
                     Spotify Subscribers
-                HOME PAGE
-                    Link Plus Spotify Embed
              -->
         </div>
     </div>
