Fixed navbar and created anchor tags

--- a/contacts.html
+++ b/contacts.html
@@ -42,16 +42,28 @@
         <div id="connect">
             <h1>Connect</h1>
             <div id="spotify" class="d-flex align-items-center">
-                <img src="images/contacts/spotify.png" alt="">
-                <h2>Lost in Neverland PH</h2>
+                <a target="_blank" href="https://open.spotify.com/artist/5bLc41bq2Ay0LoaJm6cNbr?si=t4JAtnXfRYq8p7ki9VD3Kw">
+                    <img src="images/contacts/spotify.png" alt="">
+                </a>
+                <a target="_blank" href="https://open.spotify.com/artist/5bLc41bq2Ay0LoaJm6cNbr?si=t4JAtnXfRYq8p7ki9VD3Kw">
+                    <h2>Lost in Neverland PH</h2>
+                </a>
             </div>
             <div id="youtube" class="d-flex align-items-center">
-                <img src="images/contacts/youtube.png" alt="">
-                <h2>Lost in Neverland PH - Topic</h2>
+                <a target="_blank" href="https://www.youtube.com/channel/UCP64ONic7N2_hcl4UwGDe_A">
+                    <img src="images/contacts/youtube.png" alt="">
+                </a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCP64ONic7N2_hcl4UwGDe_A">
+                    <h2>Lost in Neverland PH - Topic</h2>
+                </a>
             </div>
             <div id="itunes" class="d-flex align-items-center">
-                <img src="images/contacts/apple.png" alt="">
-                <h2>Lost in Neverland PH</h2>
+                <a target="_blank" href="https://music.apple.com/ph/artist/lost-in-neverland-ph/1703089603">
+                    <img src="images/contacts/apple.png" alt="">
+                </a>
+                <a target="_blank" href="https://music.apple.com/ph/artist/lost-in-neverland-ph/1703089603">
+                    <h2>Lost in Neverland PH</h2>
+                </a>
             </div>
         </div>
 
@@ -63,11 +75,17 @@
             </div>
             <div id="email" class="d-flex align-items-center">
                 <img src="images/contacts/email.png" alt="">
-                <h2>lostinneverlandmusicph@gmail.com</h2>
+                <a target="_blank" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=lostinneverlandmusicph@gmail.com&tf=1">
+                    <h2>lostinneverlandmusicph@gmail.com</h2>
+                </a>
             </div>
             <div id="facebook" class="d-flex align-items-center">
-                <img src="images/contacts/fb.png" alt="">
-                <h2>Lost in Neverland</h2>
+                <a target="_blank" href="https://www.facebook.com/lostinneverlandmusic">
+                    <img src="images/contacts/fb.png" alt="">
+                </a>
+                <a target="_blank" href="https://www.facebook.com/lostinneverlandmusic">
+                    <h2>Lost in Neverland</h2>
+                </a>
             </div>
         </div>
     </div>
