--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 </a>
               
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#"><h3>Gallery</h3></a>
-                  <a class="dropdown-item" href="#"><h3>Statistics</h3></a>
-                  <a class="dropdown-item" href="#"><h3>Upcoming Events</h3></a>
+                  <a class="dropdown-item" href="gallery.html"><h3>Gallery</h3></a>
+                  <a class="dropdown-item" href="statistics.html"><h3>Statistics</h3></a>
+                  <a class="dropdown-item" href="upcoming.html"><h3>Upcoming Events</h3></a>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
         <div class="d-flex flex-column align-items-center justify-content-end">
             <h1>Lost in Neverland</h1>
     
-            <iframe class="" style="border-radius:12px" src="https://open.spotify.com/embed/artist/5bLc41bq2Ay0LoaJm6cNbr?utm_source=generator&theme=0" width="70%" height="250" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe class="" style="border-radius:12px; -webkit-filter: drop-shadow(0px 0px 10px #ffffff58); filter: drop-shadow(0px 0px 10px #ffffff58);" src="https://open.spotify.com/embed/artist/5bLc41bq2Ay0LoaJm6cNbr?utm_source=generator&theme=0" width="70%" height="250" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <!-- 
             TODO:
                 STATISTICS
@@ -44,6 +44,8 @@
                     Page Visitors
                     Likes on Page
                     Spotify Subscribers
+                Gallery:
+                Upcoming Events:
              -->
         </div>
     </div>
