Added hyperlink to nav logo

--- a/about.html
+++ b/about.html
@@ -15,7 +15,9 @@
 <body>
     <div class="container d-flex justify-content-between align-items-center" id="navbar">
         <div id="nav-logo">
+          <a href="index.html">
             <img src="images/lin.png" alt="">
+          </a>
         </div>
         
         <div class="d-flex justify-content-around" id="nav-pages">
