--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <div class="container d-flex justify-content-between align-items-center" id="navbar">
         <div id="nav-logo">
-            <img src="images/lin.png" alt="">
+            <a href="index.html">
+                <img src="images/lin.png" alt="">
+            </a>
         </div>
         
         <div class="d-flex justify-content-around" id="nav-pages">
