--- a/contacts.html
+++ b/contacts.html
@@ -10,14 +10,14 @@
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
     <link rel="stylesheet" href="index.css">
-
-    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div class="container d-flex justify-content-between align-items-center" id="navbar">
         <div id="nav-logo">
-            <img src="images/lin.png" alt="">
+            <a href="index.html">
+                <img src="images/lin.png" alt="">
+            </a>
         </div>
         
         <div class="d-flex justify-content-around" id="nav-pages">
